--- a/test_sign_in.html
+++ b/test_sign_in.html
@@ -41,7 +41,7 @@
 
         <section class="form-wrap">
             <h1>Sign In</h1>
-            <form id="signinForm">
+            <form id="frmSignIn">
               <input type="email" id="emailInputSignin" placeholder="Email" required>
               <input type="password" id="passwordInputSignin" placeholder="Password" pattern=".*" required>
 
@@ -53,6 +53,7 @@
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/aws-cognito-sdk.min.js"></script>
         <script src="js/vendor/amazon-cognito-identity.min.js"></script>
-        <script src="js/test.js"></script>
+        <script src="js/config.js"></script>
+        <script src="js/cognito-auth.js"></script>
     </body>
 </html>
